# i2c_wrapper

./: .gitignore  CMakeLists.txt  Readme.markdown
include/: check_funcs.h  i2c_wrapper.h
lib/: README.txt
src/: Makefile  accel_test.c  back_emf_test.c  battery_test.c  check_funcs.c  i2c_wrapper.c
